REGRESSION(294019@main): input field does not show user input while user is actively typing https://bugs.webkit.org/show_bug.cgi?id=304001 <rdar://163613957>

Reviewed by Antti Koivisto.

Let's loosen up isContentConsideredStale a bit so that we still paint inline content even
when an out-of-flow box is dirty. Normally we would bail out on needsLayout (see FIXME), but
it is reasonable to exclude non-inflow (and by definition non-inline) content here.

Test: fast/inline/missing-content-on-autofill-with-out-of-flow-input-descendant.html

* LayoutTests/TestExpectations:
* LayoutTests/fast/inline/missing-content-on-autofill-with-out-of-flow-input-descendant-expected.html: Added.
* LayoutTests/fast/inline/missing-content-on-autofill-with-out-of-flow-input-descendant.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::isContentConsideredStale const):

Canonical link: https://commits.webkit.org/304311@main